--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6231,5 +6231,112 @@ label,
 .checkbox label {
   font-weight: 300;
 }
+/*header*/
+header {
+  display: block;
+  float: left;
+  width: 100%;
+  height: 140px;
+  background: #057aa6;
+}
+header a.awsome {
+  font-size: 120px;
+  color: #ffffff;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+header h1 {
+  margin-left: 30px;
+}
+header h1 {
+  color: #ffffff;
+}
+/* navigation */
+nav,
+section {
+  display: block;
+  float: left;
+  width: 100%;
+}
+.head-nav {
+  padding: 0px;
+}
+.head-nav .btn {
+  margin: -40px auto 0 auto;
+  width: 80px;
+  display: block;
+  float: none;
+  padding: 0px;
+}
+.head-nav .btn a {
+  font-size: 50px;
+}
+.head-nav .btn a:hover {
+  background: #40bbe8;
+}
+.head-nav .btn-center {
+  margin: 0 auto;
+  width: 100%;
+}
+/* home page buttons */
+.btn {
+  display: block;
+  float: left;
+  border: none;
+}
+.btn .btn-round {
+  display: block;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  border-radius: 50%;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  box-shadow: 2px 2px 6px #CCCCCC;
+}
+.btn-round:hover {
+  background: #057aa6;
+  color: #ffffff;
+}
+/*gifts */
+.gifts {
+  color: #057aa6;
+  font-weight: bold;
+  font-size: 14px;
+}
+.gifts li {
+  padding: 28px 80px;
+  min-height: 80px;
+}
+.gifts li a {
+  position: absolute;
+  left: 10px;
+  top: 28px;
+  /* padding-top from .gift */
+  color: #ffc533;
+}
+footer .nav a {
+  font-size: 16px;
+}
+/* colors */
+.green {
+  background: #01c568;
+}
+.blue {
+  background: #40bbe8;
+}
+.yellow {
+  background: #ffc533;
+}
+.red {
+  background: radial-gradient(5px -9px, circle, white 8%, red 26px);
+  background: #ff6633;
+}
+.darkblue {
+  background: #057aa6;
+}
 
 /*# sourceMappingURL=app.css.map */
